--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "super_shop",
     "slug": "super_shop",
+    "description": "super shop",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
